tdf#155228 vcl: PDF export: /Tabs needs PDF name, not string

(regression from commit fa3f04bdd4f73a1b3be70dfb709c44638ef7e3d9)

Change-Id: I5ccc37cd538448b2cb9db594287b49869589b2db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151700
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 7c3baaa4fecefa8be46f5e7d25cb9b6130f28aa9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151619
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>